Fixing feedback
