# api/openapi.yaml
@@ -10,8 +10,8 @@ info:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
-servers:
-- url: /
+
+
 paths:
   /user:
     post:
@@ -125,7 +125,7 @@ paths:
   /user/{UserID}/contract/{ContractID}:
     put:
       description: fr4
-      operationId: userDecision
+      operationId: user decision
       parameters:
       - name: UserID
         in: path
@@ -171,7 +171,7 @@ paths:
       summary: FR 8 - The user should be able to search and view the actions of the
         bots.
       description: View the posts the Bots have done
-      operationId: getPosts
+      operationId: get-posts
       parameters:
       - name: ContractID
         in: path
@@ -210,7 +210,7 @@ paths:
       summary: FR 8 - The user should be able to search and view the actions of the
         bots.
       description: Edit the filters of the search
-      operationId: filterBy
+      operationId: filter-by
       parameters:
       - name: ContractID
         in: path
@@ -253,9 +253,8 @@ paths:
       x-swagger-router-controller: Default
   /user/{UserID}/contract/{ContractID}/graph/{GraphID}:
     get:
-      description: |
-        Returns all statistical graphs for the specific campaign
-      operationId: SeeStatistics
+      description: Returns all statistical graphs for the specific campaign
+      operationId: See statistics
       parameters:
       - name: ContractID
         in: path
@@ -302,7 +301,7 @@ paths:
     get:
       summary: FR9
       description: Returns a bots' profile
-      operationId: SeeThePostsByAllBots
+      operationId: See the posts by all bots
       parameters:
       - name: ContractID
         in: path
@@ -347,15 +346,25 @@ paths:
       x-swagger-router-controller: Default
   /user/feedback:
     post:
+      summary: Send feedback
       description: User gives feedback
-      operationId: UserSendsFeedback
+      operationId: sendFeedback
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/user_feedback_body'
+        required: true
       responses:
         "200":
           description: sent feedback
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_200'
+                type: array
+                items:
+                  $ref: '#/components/schemas/feedback'
+                x-content-type: application/json
         "400":
           description: unexpected error
           content:
@@ -444,13 +453,13 @@ components:
           type: number
       example:
         color: color
-        size: 1.4658129805029452
+        size: 1.46581298050294517310021547018550336360931396484375
         xData:
-        - 0.8008281904610115
-        - 0.8008281904610115
+        - 0.80082819046101150206595775671303272247314453125
+        - 0.80082819046101150206595775671303272247314453125
         yData:
-        - 6.027456183070403
-        - 6.027456183070403
+        - 6.02745618307040320615897144307382404804229736328125
+        - 6.02745618307040320615897144307382404804229736328125
         labels:
         - labels
         - labels
@@ -491,6 +500,16 @@ components:
         - Stats
         id: 0
         Name: Name
+    feedback:
+      type: object
+      properties:
+        message:
+          type: string
+        email:
+          type: string
+      example:
+        message: message
+        email: mail@mail.com
     user_body:
       type: object
       properties:
@@ -525,14 +544,10 @@ components:
           type: integer
         Platforms:
           type: integer
-    inline_response_200:
+    user_feedback_body:
       type: object
       properties:
         message:
           type: string
-        email:
+        mail:
           type: string
-          description: Your feedback has been submitted.
-      example:
-        message: message
-        email: email
